--- a/homepage.html
+++ b/homepage.html
@@ -36,12 +36,12 @@
 				  	</div>
 				  </a></li>
 				  <li><a href="">CULTURE
-				  		<div class="header__navbar__arrow">
+				  	<div class="header__navbar__arrow">
 				  		<svg     fill= "#e5127d" viewBox="0 0 832 512" id="icon-norgie-down" width="100%" height="100%"><path d="M15.244 98.497L379.433 495.43c20.249 22.24 53.137 22.23 73.373-.021.51-.608.71-1.47 1.25-2.077L817.152 98.259c20.233-22.224 20.223-58.326-.028-80.54-.202-.1-.531-.202-.735-.404C807.065 6.732 793.993-.005 779.353 0L52.923.208C38.073.212 24.903 7.286 15.43 18.18l-.2-.227c-20.314 22.325-20.304 58.33.023 80.543h-.008z"></path></svg>
 				  	</div>
 				  </a></li>
 				  <li><a href="">MORE
-				  		<div class="header__navbar__arrow">
+				  	<div class="header__navbar__arrow">
 				  		<svg     fill= "#e5127d" viewBox="0 0 832 512" id="icon-norgie-down" width="100%" height="100%"><path d="M15.244 98.497L379.433 495.43c20.249 22.24 53.137 22.23 73.373-.021.51-.608.71-1.47 1.25-2.077L817.152 98.259c20.233-22.224 20.223-58.326-.028-80.54-.202-.1-.531-.202-.735-.404C807.065 6.732 793.993-.005 779.353 0L52.923.208C38.073.212 24.903 7.286 15.43 18.18l-.2-.227c-20.314 22.325-20.304 58.33.023 80.543h-.008z"></path></svg>
 				  	</div>
 				  </a></li>
@@ -49,6 +49,20 @@
 				</ul>
 			</nav>
 		</div>
+		
+		<div class="stories-black">
+			<div class="stories-black__story">
+				<div class="stories-black__story__inner__pic" style="">
+					<img class="image" src="./images/akrales_160328_1001_A_195.0.0.jpg" alt="" href="">
+				</div>
+				<div class="stories-black__story__inner__text">
+					<a class="stories-black__story__inner__text__big" href="" > How to spot a Twitter bot </a>
+					<p class="by">by</p>
+					<a class="stories-black__story__inner__text__small" href="">Shannon Liao</a>
+				</div>
+			</div>
+		</div>
 	</div>
 
 </body>
+</html>
