lay out of the stories with black background completed.

--- a/homepage.html
+++ b/homepage.html
@@ -51,17 +51,72 @@
 		</div>
 		
 		<div class="stories-black">
-			<div class="stories-black__story">
+			<div class="stories-black__story s1">
 				<div class="stories-black__story__inner__pic" style="">
 					<img class="image" src="./images/akrales_160328_1001_A_195.0.0.jpg" alt="" href="">
 				</div>
 				<div class="stories-black__story__inner__text">
 					<a class="stories-black__story__inner__text__big" href="" > How to spot a Twitter bot </a>
-					<p class="by">by</p>
-					<a class="stories-black__story__inner__text__small" href="">Shannon Liao</a>
+					<div class="author">
+						<p class="by">by</p>
+						<a class="stories-black__story__inner__text__small" href="">Shannon Liao</a>
+					</div>
+				</div>
+			</div>
+			<div class="stories-black__story s2">
+				<div class="stories-black__story__inner__pic" style="">
+					<img class="image" src="./images/akrales_170502_1637_0494.0.0.jpg" alt="" href="">
+				</div>
+				<div class="stories-black__story__inner__text">
+					<a class="stories-black__story__inner__text__big s2__title" href="" > Honesty app Sarahah is becoming a self-esteem machine </a>
+					<div class="author">
+						<p class="by">by</p>
+						<a class="stories-black__story__inner__text__small" href="">Megan Farokhmanesh</a>
+					</div>
+				</div>
+			</div>	
+			<div class="stories-black__story s2">
+				<div class="stories-black__story__inner__pic" style="">
+					<img class="image" src="./images/mswindows2_2040.0.0.jpg" alt="" href="">
+				</div>
+				<div class="stories-black__story__inner__text">
+					<a class="stories-black__story__inner__text__big s2__title" href="" > My favorite game has been invaded by killer AI bots and Elon Musk hype </a>
+					<div class="author">
+						<p class="by">by</p>
+						<a class="stories-black__story__inner__text__small" href="">Vlad Savov</a>
+					</div>
+				</div>
+			</div>
+			<div class="stories-black__story s2">
+				<div class="stories-black__story__inner__pic" style="">
+					<img class="image" src="./images/cararobbins-sundar-2.0.jpg" alt="" href="">
+				</div>
+				<div class="stories-black__story__inner__text">
+					<a class="stories-black__story__inner__text__big s2__title" href="" > Google spinoff Waymo patents softer self-driving cars to protect pedestrians </a>
+					<div class="author">
+						<p class="by">by</p>
+						<a class="stories-black__story__inner__text__small" href="">James Vincent</a>
+					</div>
+				</div>
+			</div>
+			<div class="stories-black__story s2">
+				<div class="stories-black__story__inner__pic" style="">
+					<img class="image" src="./images/IMG_6681.0.jpg" alt="" href="">
+				</div>
+				<div class="stories-black__story__inner__text">
+					<a class="stories-black__story__inner__text__big s2__title" href="" > Antarctica’s ice sheet hides nearly a hundred hidden volcanoes </a>
+					<div class="author">
+						<p class="by">by</p>
+						<a class="stories-black__story__inner__text__small" href="">Andrew Liptak</a>
+					</div>
 				</div>
 			</div>
 		</div>
+		
+	
+
+
+
 	</div>
 
 </body>
